feat: Enhance Filter UDF functionality with auto-import and new built-in filters
- Added automatic registration of Filter UDFs at startup, improving usability.
- Updated AviatorQueue to use ArrayList instead of LinkedList for better performance.
- Refactored ChainExpr and Translator to support new filtering logic.
- Modified tests to validate new filter functionalities and ensure compatibility with existing features.
- Removed TemperatureFilterUDF as it was replaced by the new built-in filters.